--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
 @import url(./navbar.css);
 @import url(./jumbotron.css);
 @import url(./footer.css);
@@ -34,9 +34,8 @@ h6 {
   line-height: 1;
 }
 
-
-p{
-  font-family: 'Roboto', sans-serif;
+p {
+  font-family: "Roboto", sans-serif;
 }
 
 .content {
@@ -70,7 +69,6 @@ p{
   padding-top: 80px;
 }
 
-
 /* Divisi */
 
 #divisi img {
@@ -82,40 +80,48 @@ p{
   width: 60%;
   padding: 5px 20px;
   font-size: 18px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
-
-#struktur-organisasi{
+#struktur-organisasi {
   text-align: center;
 }
 
-#struktur-organisasi img{
+#struktur-organisasi img {
   width: 80%;
   margin: 0 auto;
 }
 
-
-
-.card{
+.card {
   box-shadow: 1px 5px 10px 0 rgba(0, 0, 0, 0.5);
   padding: 20px;
   border-radius: 10px;
 }
 
-aside{
+aside {
   position: relative;
   width: 50%;
   margin: 50px auto;
+  padding: 10px;
+  overflow: hidden;
 }
 
-.tanda-tangan{
+ aside .profile-image img{
+    display: block;
+    background: var(--primary-color);
+    width: 100%;
+    margin: 0 auto;
+    border-radius: 10px;
+    filter: brightness(0.9);
+    filter: saturate(80%);
+  }
+
+.tanda-tangan {
   position: relative;
   top: -20px;
   left: -20px;
-  width: 100px;
+  max-width: 100px;
 }
-
 
 @media (max-width: 700px) {
   .flex-row {
@@ -126,7 +132,6 @@ aside{
     flex-direction: column-reverse;
   }
 
-
   #about .about-content h1 {
     font-size: 1.5em;
   }
@@ -135,9 +140,9 @@ aside{
     width: 100%;
   }
 
-    #divisi img{
-      order: 1;
-    }
+  #divisi img {
+    order: 1;
+  }
 
   #divisi img,
   #divisi .divisi-desc {
@@ -146,7 +151,7 @@ aside{
     font-size: 1em;
   }
 
-  aside{
-    width: 80%;
+  aside {
+    width: 90%;
   }
 }
